# flying-probe-copilot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  OBSIDIAN_SETUP.md  README.md  SETUP.md  flying-probe-copilot-RESOURCES.md  flying-probe-copilot-SKILLS.md  pyproject.toml
.claude/: settings.json
.claude/agents/: exec.md
.claude/hooks/: block_dangerous_git.py  doc_reminder_stop.py  plan_approval_gate.py
.claude/rules/: agent-conduct.md  session-workflow.md  testing.md
.claude/templates/: prompt-caching.md  sub-agent-brief.md  tiering.md  work-instructions.md
.cursor/rules/: project.mdc
.github/workflows/: ci.yml  screenshots.yml
.obsidian/: app.json  core-plugins.json
docs/: DECISIONS.md  DEMO.md  GUARDRAILS.md  REQUIREMENTS.md  ROADMAP.md  SCOPE.md  SKILLS.md  case-study.md  public-flip-checklist.md  public-flip-runbook.md
docs/eval/: phase3-eval-questions.md
docs/flying-probe-copilot-obsidian/: .gitignore  README.md
docs/knowledge-base/: 00-index.md  README.md
docs/launch/: 2026-07-03-blog-post.md  2026-07-03-linkedin-post.md  2026-07-03-portfolio-crosspost.md  2026-07-03-resume-bullet.md
docs/logs/: AGENT_HANDOFF_LOG.md  BUG_LOG.md  DECISION_LOG.md  SESSION_LOG.md
docs/obsidian/: README.md
docs/plans/: 2026-06-13-brief.md  2026-06-13-manual-qa.md  2026-06-13-plan.md  2026-06-14-brief.md  2026-06-14-manual-qa.md  2026-06-14-phase2-operator-brief.md  2026-06-14-phase2-operator-plan.md  2026-06-14-plan.md  2026-06-14-triple-check.md  2026-06-16-brief.md  2026-06-16-manual-qa.md  2026-06-16-phase2-operator-manual-qa.md  2026-06-16-plan.md  2026-06-16-test-plan.md  2026-06-16-triple-check.md  2026-06-18-phase2-slice2-brief.md  2026-06-18-phase2-slice2-decision-gate.md  2026-06-18-phase2-slice2-manual-qa.md  2026-06-18-phase2-slice2-plan.md  2026-06-18-phase2-slice2-test-plan.md  2026-06-18-phase2-slice2-triple-check.md  2026-06-18-phase2-slice3-brief.md  2026-06-18-phase2-slice3-decision-gate.md  2026-06-18-phase2-slice3-manual-qa.md  2026-06-18-phase2-slice3-plan.md  2026-06-18-phase2-slice3-triple-check.md  2026-06-20-phase3-slice1-brief.md  2026-06-20-phase3-slice1-plan.md  (+37 more)
notebooks/: 01-queries.ipynb
scripts/: _capture_app.py  build-portfolio-data.sh  capture_screenshots.py
specs/: synthetic-log-generator.md
tests/: conftest.py
(+133 files in other folders)
