[project]
name = "flying-probe-copilot"
version = "0.1.0"
description = "PCBA flying-probe / ICT test-log intelligence co-pilot: SQL analytics + hybrid RAG Q&A"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1",
    "chromadb>=0.6",
    "sentence-transformers>=3.3",
    "rank-bm25>=0.2",
    "google-genai>=1.0",
    "streamlit>=1.45",
    "plotly>=5.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
generator = "flying_probe_copilot.generator.cli:main"
parser = "flying_probe_copilot.parser.cli:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "playwright>=1.49",
    "pytest-cov>=6.0",
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "--cov=src/flying_probe_copilot --cov-report=term-missing"
pythonpath   = [".", "src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "docs", "notebooks", ".claude", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "F401"]

[tool.ruff.format]

[tool.hatch.build.targets.wheel]
packages = ["src/flying_probe_copilot"]
